# SumProj1

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  Transaction.cpp  Transaction.h  main.cpp
Tests/: DatabaseTests.cpp  TransactionTests.cpp
